run black linter, fix validators problem, fix tests

--- a/plugins/trendmicro_visionone/plugin.spec.yaml
+++ b/plugins/trendmicro_visionone/plugin.spec.yaml
@@ -372,7 +372,7 @@ types:
       type: string
       description: Email address
       required: false
-      example: example@example.com
+      example: user@example.com
     description:
       title: Description
       type: string
