Final fixes on checks

--- a/plugins/rest/Dockerfile
+++ b/plugins/rest/Dockerfile
@@ -15,6 +15,7 @@ ADD . /python/src
 RUN	python setup.py build && python setup.py install
 
 # User to run plugin code. The two supported users are: root, nobody
-USER nobody
+# needed for SSL Verify
+USER root
 
 ENTRYPOINT ["/usr/local/bin/komand_rest"]
