--- a/plugins/rest/plugin.spec.yaml
+++ b/plugins/rest/plugin.spec.yaml
@@ -13,6 +13,9 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/rest
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
   docs_url: https://docs.rapid7.com/insightconnect/http-requests
+key_features: ["it can do this", "and that"]
+requirements: ["python3", "requests"]
+references: ["www.google.com"]
 tags:
 - rest
 - request
@@ -28,7 +31,7 @@ enable_cache: true
 sdk:
   type: full
   version: 5
-  user: nobody
+  user: root
 connection:
   base_url:
     title: Base URL
