--- a/plugins/rest/plugin.spec.yaml
+++ b/plugins/rest/plugin.spec.yaml
@@ -13,9 +13,9 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/rest
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
   docs_url: https://docs.rapid7.com/insightconnect/http-requests
-key_features: ["it can do this", "and that"]
-requirements: ["python3", "requests"]
-references: ["www.google.com"]
+key_features: ["Make RESTful API calls"]
+requirements: ["None"]
+references: ["https://requests.readthedocs.io/en/latest/", "https://docs.rapid7.com/insightconnect/http-requests"]
 tags:
 - rest
 - request
